agregado main oficial

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,8 @@
      "output_type": "stream",
      "text": [
       "Parametros construidos\n",
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-04-26\n",
       "Set parameter TimeLimit to value 1800\n",
       "Variables de decisión instanciadas\n",
       "R1 agregada\n",
@@ -30,9 +32,9 @@
       "R18 agregada\n",
       "R20 agregada\n",
       "Optimizando...\n",
-      "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (linux64)\n",
+      "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (win64)\n",
       "\n",
-      "CPU model: AMD Ryzen 5 2500U with Radeon Vega Mobile Gfx, instruction set [SSE2|AVX|AVX2]\n",
+      "CPU model: Intel(R) Core(TM) i5-8250U CPU @ 1.60GHz, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 1747310 rows, 160336 columns and 4052663 nonzeros\n",
@@ -43,11 +45,14 @@
       "  Objective range  [1e-01, 3e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+05]\n",
-      "Presolve removed 1643487 rows and 124550 columns (presolve time = 5s) ...\n",
-      "Presolve removed 1646290 rows and 125225 columns (presolve time = 10s) ...\n",
-      "Presolve removed 1652306 rows and 125326 columns (presolve time = 15s) ...\n",
+      "Presolve removed 0 rows and 0 columns (presolve time = 6s) ...\n",
+      "Presolve removed 299160 rows and 15780 columns (presolve time = 10s) ...\n",
+      "Presolve removed 1622752 rows and 124518 columns (presolve time = 15s) ...\n",
+      "Presolve removed 1645883 rows and 125115 columns (presolve time = 20s) ...\n",
+      "Presolve removed 1646367 rows and 125310 columns (presolve time = 25s) ...\n",
+      "Presolve removed 1652306 rows and 125326 columns (presolve time = 30s) ...\n",
       "Presolve removed 1652306 rows and 125326 columns\n",
-      "Presolve time: 16.24s\n",
+      "Presolve time: 30.59s\n",
       "Presolved: 95004 rows, 35010 columns, 330948 nonzeros\n",
       "Variable types: 0 continuous, 35010 integer (13094 binary)\n",
       "\n",
@@ -58,74 +63,26 @@
       "Root simplex log...\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0   -0.0000000e+00   0.000000e+00   3.970958e+05     22s\n",
-      "Concurrent spin time: 0.01s\n",
+      "       0   -0.0000000e+00   0.000000e+00   3.970958e+05     41s\n",
+      "Concurrent spin time: 0.16s\n",
       "\n",
       "Solved with dual simplex (dual model)\n",
       "\n",
-      "Root relaxation: objective 0.000000e+00, 4920 iterations, 2.36 seconds (0.77 work units)\n",
-      "Total elapsed time = 32.96s\n",
-      "Total elapsed time = 38.25s\n",
+      "Root relaxation: objective 0.000000e+00, 4961 iterations, 5.00 seconds (0.83 work units)\n",
+      "Total elapsed time = 74.11s\n",
+      "Total elapsed time = 76.71s\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0    0.00000    0  194          -    0.00000      -     -   40s\n",
-      "     0     0    0.00000    0  303          -    0.00000      -     -   44s\n",
-      "     0     0    0.00000    0 1405          -    0.00000      -     -   71s\n",
-      "     0     0    0.00000    0 1090          -    0.00000      -     -   77s\n",
-      "     0     0    0.00000    0  161          -    0.00000      -     -   96s\n",
-      "     0     0    0.00000    0  103          -    0.00000      -     -   97s\n",
-      "     0     0    0.00000    0  116          -    0.00000      -     -  119s\n",
-      "     0     0    0.00000    0  418          -    0.00000      -     -  125s\n",
-      "     0     0    0.00000    0   98          -    0.00000      -     -  148s\n",
-      "     0     0    0.00000    0  366          -    0.00000      -     -  158s\n",
-      "     0     0    0.00000    0  133          -    0.00000      -     -  181s\n",
-      "     0     0    0.00000    0  323          -    0.00000      -     -  186s\n",
-      "     0     0    0.00000    0  130          -    0.00000      -     -  203s\n",
-      "     0     0    0.00000    0  284          -    0.00000      -     -  205s\n",
-      "     0     0    0.00000    0   85          -    0.00000      -     -  226s\n",
-      "     0     0    0.00000    0  139          -    0.00000      -     -  228s\n",
-      "     0     0    0.00000    0   54          -    0.00000      -     -  237s\n",
-      "     0     0    0.00000    0  284          -    0.00000      -     -  238s\n",
-      "     0     0    0.00000    0   74          -    0.00000      -     -  244s\n",
-      "     0     0    0.00000    0  328          -    0.00000      -     -  249s\n",
-      "     0     0    0.00000    0   39          -    0.00000      -     -  266s\n",
-      "H    0     0                       0.0000000    0.00000  0.00%     -  266s\n",
-      "     0     0    0.00000    0   39    0.00000    0.00000  0.00%     -  266s\n",
-      "\n",
-      "Cutting planes:\n",
-      "  Learned: 70\n",
-      "  Lift-and-project: 1\n",
-      "  Cover: 25\n",
-      "  Implied bound: 74\n",
-      "  Clique: 6\n",
-      "  MIR: 39\n",
-      "  StrongCG: 7\n",
-      "  Flow cover: 10\n",
-      "  GUB cover: 16\n",
-      "  Zero half: 10\n",
-      "  Network: 2\n",
-      "  RLT: 18\n",
-      "  Relax-and-lift: 35\n",
-      "  BQP: 31\n",
-      "\n",
-      "Explored 1 nodes (238776 simplex iterations) in 266.95 seconds (149.56 work units)\n",
-      "Thread count was 8 (of 8 available processors)\n",
-      "\n",
-      "Solution count 1: 0 \n",
-      "\n",
-      "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n",
-      "0 <gurobi.Constr R8>\n",
-      "La holgura presupuestaria de la solución 0 es 3.1142959999999675\n",
-      "\n",
-      "---------- Manejo Soluciones ----------\n",
-      "El valor objetivo es de: 0.0\n",
-      "Se compra el camión 1 de tipo diesel\n",
-      "Se compra el camión 5 de tipo diesel\n",
-      "Se compra el camión 9 de tipo eléctrico\n",
-      "Se compra el camión 12 de tipo eléctrico\n"
+      "     0     0    0.00000    0  187          -    0.00000      -     -   78s\n",
+      "     0     0    0.00000    0  771          -    0.00000      -     -  106s\n",
+      "     0     0    0.00000    0  755          -    0.00000      -     -  118s\n",
+      "     0     0    0.00000    0  626          -    0.00000      -     -  128s\n",
+      "     0     0    0.00000    0   39          -    0.00000      -     -  166s\n",
+      "     0     0    0.00000    0   40          -    0.00000      -     -  167s\n",
+      "     0     0    0.00000    0   61          -    0.00000      -     -  210s\n",
+      "     0     0    0.00000    0  173          -    0.00000      -     -  214s\n"
      ]
     }
    ],
@@ -1631,7 +1588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4
  },
