--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,87 +54,26 @@
     "Cq = 20000\n",
     "Qmax = 500\n",
     "Ce = 5000\n",
-    "G = 300  #Ajustar números"
+    "G = 500 * 1  # Para ajustar presupuesto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(1, 1): 270,\n",
-       " (2, 1): 171,\n",
-       " (3, 1): 153,\n",
-       " (4, 1): 201,\n",
-       " (5, 1): 195,\n",
-       " (6, 1): 192,\n",
-       " (7, 1): 174,\n",
-       " (8, 1): 168,\n",
-       " (9, 1): 252,\n",
-       " (10, 1): 165,\n",
-       " (1, 2): 261,\n",
-       " (2, 2): 231,\n",
-       " (3, 2): 156,\n",
-       " (4, 2): 153,\n",
-       " (5, 2): 165,\n",
-       " (6, 2): 189,\n",
-       " (7, 2): 192,\n",
-       " (8, 2): 246,\n",
-       " (9, 2): 264,\n",
-       " (10, 2): 153,\n",
-       " (1, 3): 255,\n",
-       " (2, 3): 186,\n",
-       " (3, 3): 252,\n",
-       " (4, 3): 228,\n",
-       " (5, 3): 192,\n",
-       " (6, 3): 234,\n",
-       " (7, 3): 261,\n",
-       " (8, 3): 201,\n",
-       " (9, 3): 150,\n",
-       " (10, 3): 180,\n",
-       " (1, 4): 231,\n",
-       " (2, 4): 213,\n",
-       " (3, 4): 201,\n",
-       " (4, 4): 177,\n",
-       " (5, 4): 189,\n",
-       " (6, 4): 213,\n",
-       " (7, 4): 168,\n",
-       " (8, 4): 165,\n",
-       " (9, 4): 222,\n",
-       " (10, 4): 168,\n",
-       " (1, 5): 216,\n",
-       " (2, 5): 216,\n",
-       " (3, 5): 264,\n",
-       " (4, 5): 198,\n",
-       " (5, 5): 156,\n",
-       " (6, 5): 237,\n",
-       " (7, 5): 252,\n",
-       " (8, 5): 171,\n",
-       " (9, 5): 222,\n",
-       " (10, 5): 165}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "random.seed(42)\n",
     "Md = dict()  # demandas de cada destino en cada día: llaves (d, t)\n",
     "for t in range(1, N_DIAS + 1): \n",
     "    for d in Destinos:\n",
     "        Md[(d,t)] = random.randint(50,90)\n",
-    "for k in Md.keys(): Md[k] = 3 * Md[k]  # Quintuplicar\n",
-    "Md"
+    "for k in Md.keys(): Md[k] = 1 * Md[k]  # Aqui se peude ajustar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -168,45 +107,49 @@
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 1747310 rows, 160336 columns and 4052663 nonzeros\n",
-      "Model fingerprint: 0xc0f699c2\n",
+      "Model fingerprint: 0xb36b8719\n",
       "Variable types: 0 continuous, 160336 integer (80656 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [6e-03, 1e+05]\n",
       "  Objective range  [1e-01, 3e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+05]\n",
-      "Presolve removed 0 rows and 0 columns (presolve time = 5s) ...\n",
-      "Presolve removed 1643822 rows and 124918 columns (presolve time = 10s) ...\n",
-      "Presolve removed 1654755 rows and 128030 columns (presolve time = 15s) ...\n",
+      "Presolve removed 1645875 rows and 125115 columns (presolve time = 5s) ...\n",
+      "Presolve removed 1646400 rows and 125310 columns (presolve time = 10s) ...\n",
+      "Presolve removed 1652306 rows and 125326 columns\n",
+      "Presolve time: 13.53s\n",
+      "Presolved: 95004 rows, 35010 columns, 330948 nonzeros\n",
+      "Variable types: 0 continuous, 35010 integer (13094 binary)\n",
       "\n",
-      "Interrupt request received\n",
-      "Presolve removed 1660323 rows and 128102 columns\n",
-      "Presolve time: 18.80s\n",
+      "Deterministic concurrent LP optimizer: primal and dual simplex (primal and dual model)\n",
+      "Showing first log only...\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 23.55 seconds (9.95 work units)\n",
-      "Thread count was 1 (of 8 available processors)\n",
       "\n",
-      "Solution count 0\n",
       "\n",
-      "Solve interrupted\n",
-      "Best objective -, best bound -, gap -\n",
+      "Root relaxation: interrupted, 0 iterations, 0.31 seconds (0.08 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "H    0     0                       0.0000000    0.00000  0.00%     -   17s\n",
+      "\n",
+      "Explored 1 nodes (0 simplex iterations) in 17.97 seconds (11.48 work units)\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 1: 0 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n",
+      "0 <gurobi.Constr R8>\n",
+      "La holgura presupuestaria de la solución 0 es 7.984540000000038\n",
       "\n",
       "---------- Manejo Soluciones ----------\n",
-      "El valor objetivo es de: inf\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "Unable to retrieve attribute 'x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 527\u001b[0m\n\u001b[1;32m    525\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEl valor objetivo es de: \u001b[39m\u001b[39m{\u001b[39;00mmodel\u001b[39m.\u001b[39mObjVal\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    526\u001b[0m \u001b[39mfor\u001b[39;00m camion \u001b[39min\u001b[39;00m Camiones:\n\u001b[0;32m--> 527\u001b[0m     \u001b[39mif\u001b[39;00m beta[camion]\u001b[39m.\u001b[39;49mx \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    528\u001b[0m         \u001b[39mif\u001b[39;00m E[camion] \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    529\u001b[0m             tipo \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mdiesel\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "File \u001b[0;32msrc/gurobipy/var.pxi:125\u001b[0m, in \u001b[0;36mgurobipy.Var.__getattr__\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32msrc/gurobipy/var.pxi:153\u001b[0m, in \u001b[0;36mgurobipy.Var.getAttr\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32msrc/gurobipy/attrutil.pxi:100\u001b[0m, in \u001b[0;36mgurobipy.__getattr\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Unable to retrieve attribute 'x'"
+      "El valor objetivo es de: 0.0\n",
+      "Se compra el camión 1 de tipo diesel\n",
+      "Se compra el camión 9 de tipo eléctrico\n",
+      "Se compra el camión 10 de tipo eléctrico\n",
+      "Se compra el camión 12 de tipo eléctrico\n",
+      "Se compra el camión 13 de tipo eléctrico\n"
      ]
     }
    ],
@@ -245,7 +188,7 @@
     "    10: 106,\n",
     "}  # el origen que está más cerca ofrece menos\n",
     "\n",
-    "for i in R.keys(): R[i] = 3 * R[i]  # Quintuplicar\n",
+    "for i in R.keys(): R[i] = 1 * R[i]  # Aqui se puede ajustar\n",
     "\n",
     "Bo = {(i, o): tpo_en_bloques1[o - 1] for o in Origenes for i in Camiones}\n",
     "Bd = {(i, d): tpo_en_bloques2[d - 1] for d in Destinos for i in Camiones}\n",
@@ -748,95 +691,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Y_ibto[15,3,2,4] 1.0\n",
-      "Y_ibto[15,17,6,1] 1.0\n",
-      "Y_ibto[15,25,7,1] 1.0\n",
-      "Y_ibto[15,25,9,1] 1.0\n",
-      "Y_ibto[15,27,2,1] 1.0\n",
-      "Y_ibto[15,28,1,1] 1.0\n",
-      "Y_ibto[15,28,4,1] 1.0\n",
-      "Y_ibto[15,31,3,1] 1.0\n",
-      "Y_ibto[15,33,10,1] 1.0\n",
-      "Y_ibto[15,35,8,4] 1.0\n",
-      "Y_ibto[15,35,9,1] 1.0\n",
-      "Y_ibto[15,42,2,1] 1.0\n",
-      "Y_ibto[15,43,6,1] 1.0\n",
-      "Y_ibto[15,44,1,1] 1.0\n",
-      "Y_ibto[15,44,4,1] 1.0\n",
-      "Y_ibto[16,1,2,1] 1.0\n",
-      "Y_ibto[16,1,3,1] 1.0\n",
-      "Y_ibto[16,1,4,1] 1.0\n",
-      "Y_ibto[16,1,5,1] 1.0\n",
-      "Y_ibto[16,1,6,1] 1.0\n",
-      "Y_ibto[16,1,7,1] 1.0\n",
-      "Y_ibto[16,1,8,8] 1.0\n",
-      "Y_ibto[16,1,9,1] 1.0\n",
-      "Y_ibto[16,1,10,1] 1.0\n",
-      "Y_ibto[16,2,8,1] 1.0\n",
-      "Y_ibto[16,8,10,1] 1.0\n",
-      "Y_ibto[16,12,8,1] 1.0\n",
-      "Y_ibto[16,15,3,1] 1.0\n",
-      "Y_ibto[16,17,5,4] 1.0\n",
-      "Y_ibto[16,29,5,4] 1.0\n",
-      "Y_ibto[16,30,5,1] 1.0\n",
-      "Y_ibto[16,30,8,4] 1.0\n",
-      "Y_ibto[16,30,10,1] 1.0\n",
-      "Y_ibto[16,31,6,4] 1.0\n",
-      "Y_ibto[16,32,7,1] 1.0\n",
-      "Y_ibto[16,36,7,8] 1.0\n",
-      "Y_ibto[16,37,1,4] 1.0\n",
-      "Y_ibto[16,37,2,1] 1.0\n",
-      "Y_ibto[16,37,4,1] 1.0\n",
-      "Y_ibto[16,37,8,1] 1.0\n",
-      "Y_ibto[16,38,1,1] 1.0\n",
-      "Y_ibto[16,38,3,1] 1.0\n",
-      "Y_ibto[16,38,9,1] 1.0\n",
-      "Y_ibto[16,39,6,4] 1.0\n",
-      "Y_ibto[16,40,4,1] 1.0\n",
-      "Y_ibto[16,40,6,1] 1.0\n",
-      "Y_ibto[16,40,8,4] 1.0\n",
-      "Y_ibto[16,41,2,1] 1.0\n",
-      "Y_ibto[16,41,5,1] 1.0\n",
-      "Y_ibto[16,42,10,1] 1.0\n",
-      "Y_ibto[16,44,3,1] 1.0\n",
-      "Y_ibto[16,44,9,1] 1.0\n",
-      "Z_ibtd[15,23,5,3] 1.0\n",
-      "Z_ibtd[15,32,5,9] 1.0\n",
-      "Z_ibtd[15,32,10,3] 1.0\n",
-      "Z_ibtd[15,34,7,3] 1.0\n",
-      "Z_ibtd[15,36,8,3] 1.0\n",
-      "Z_ibtd[15,37,6,7] 1.0\n",
-      "Z_ibtd[15,39,2,7] 1.0\n",
-      "Z_ibtd[15,39,4,3] 1.0\n",
-      "Z_ibtd[15,40,3,9] 1.0\n",
-      "Z_ibtd[15,42,6,9] 1.0\n",
-      "Z_ibtd[15,43,1,3] 1.0\n",
-      "Z_ibtd[15,43,5,7] 1.0\n",
-      "Z_ibtd[15,44,10,7] 1.0\n",
-      "Z_ibtd[15,46,3,7] 1.0\n",
-      "Z_ibtd[15,46,7,7] 1.0\n",
-      "Z_ibtd[15,46,8,7] 1.0\n",
-      "Z_ibtd[15,46,9,7] 1.0\n",
-      "Z_ibtd[16,19,6,3] 1.0\n",
-      "Z_ibtd[16,27,7,9] 1.0\n",
-      "Z_ibtd[16,27,9,3] 1.0\n",
-      "Z_ibtd[16,29,2,9] 1.0\n",
-      "Z_ibtd[16,30,1,9] 1.0\n",
-      "Z_ibtd[16,30,4,9] 1.0\n",
-      "Z_ibtd[16,33,3,3] 1.0\n",
-      "Z_ibtd[16,35,10,9] 1.0\n",
-      "Z_ibtd[16,37,9,9] 1.0\n",
-      "Z_ibtd[16,41,8,9] 1.0\n",
-      "Z_ibtd[16,44,2,3] 1.0\n",
-      "Z_ibtd[16,46,1,7] 1.0\n",
-      "Z_ibtd[16,46,4,7] 1.0\n"
+      "Y_ibto[9,2,1,5] 1.0\n",
+      "Y_ibto[9,2,2,5] 1.0\n",
+      "Y_ibto[9,2,3,5] 1.0\n",
+      "Y_ibto[9,2,4,5] 1.0\n",
+      "Y_ibto[9,2,5,5] 1.0\n",
+      "Y_ibto[9,3,1,2] 1.0\n",
+      "Y_ibto[9,3,2,2] 1.0\n",
+      "Y_ibto[9,3,3,2] 1.0\n",
+      "Y_ibto[9,3,4,2] 1.0\n",
+      "Y_ibto[9,3,5,2] 1.0\n",
+      "Y_ibto[10,1,2,4] 1.0\n",
+      "Y_ibto[10,1,3,4] 1.0\n",
+      "Y_ibto[10,1,4,4] 1.0\n",
+      "Y_ibto[10,2,1,4] 1.0\n",
+      "Y_ibto[10,2,5,4] 1.0\n",
+      "Y_ibto[12,1,1,4] 1.0\n",
+      "Y_ibto[12,1,2,4] 1.0\n",
+      "Y_ibto[12,1,3,4] 1.0\n",
+      "Y_ibto[12,1,4,4] 1.0\n",
+      "Y_ibto[12,1,5,4] 1.0\n",
+      "Y_ibto[12,2,1,8] 1.0\n",
+      "Y_ibto[12,2,2,8] 1.0\n",
+      "Y_ibto[12,2,3,8] 1.0\n",
+      "Y_ibto[12,2,4,8] 1.0\n",
+      "Y_ibto[12,2,5,8] 1.0\n",
+      "Y_ibto[12,17,1,8] 1.0\n",
+      "Y_ibto[12,17,2,8] 1.0\n",
+      "Y_ibto[12,17,3,8] 1.0\n",
+      "Y_ibto[12,17,4,8] 1.0\n",
+      "Y_ibto[12,17,5,8] 1.0\n",
+      "Y_ibto[13,2,1,5] 1.0\n",
+      "Y_ibto[13,2,2,5] 1.0\n",
+      "Y_ibto[13,2,3,5] 1.0\n",
+      "Y_ibto[13,2,4,5] 1.0\n",
+      "Y_ibto[13,2,5,5] 1.0\n",
+      "Y_ibto[13,3,1,2] 1.0\n",
+      "Y_ibto[13,3,2,2] 1.0\n",
+      "Y_ibto[13,3,3,2] 1.0\n",
+      "Y_ibto[13,3,4,2] 1.0\n",
+      "Y_ibto[13,3,5,2] 1.0\n",
+      "Z_ibtd[10,12,1,3] 1.0\n",
+      "Z_ibtd[10,12,2,3] 1.0\n",
+      "Z_ibtd[10,12,3,3] 1.0\n",
+      "Z_ibtd[10,12,4,3] 1.0\n",
+      "Z_ibtd[10,12,5,3] 1.0\n",
+      "Z_ibtd[10,26,1,9] 1.0\n",
+      "Z_ibtd[10,26,2,9] 1.0\n",
+      "Z_ibtd[10,26,3,9] 1.0\n",
+      "Z_ibtd[10,26,4,9] 1.0\n",
+      "Z_ibtd[10,26,5,9] 1.0\n",
+      "Z_ibtd[10,27,1,7] 1.0\n",
+      "Z_ibtd[10,27,2,7] 1.0\n",
+      "Z_ibtd[10,27,3,7] 1.0\n",
+      "Z_ibtd[10,27,4,7] 1.0\n",
+      "Z_ibtd[10,27,5,7] 1.0\n"
      ]
     }
    ],
